<?xml version="1.0" encoding="utf-8"?>
<!--
  Toolbar padrão (Figma: altura ~56dp, top 24dp).
  Variantes controladas em runtime:
    - logo (Home/Busca/Timeline): ivLogo visível, btnBack gone, tvTitle gone
    - título (Detalhes): btnBack + tvTitle visíveis, ivLogo gone
  btnTheme alterna sol/lua conforme o tema atual.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/toolbar_height"
    android:layout_marginTop="@dimen/toolbar_top_margin">

    <ImageButton
        android:id="@+id/btnBack"
        style="@style/Widget.Marvel.IconButton"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_chevron_left"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/app_text_primary"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_marginStart="@dimen/screen_padding"
        android:adjustViewBounds="true"
        android:contentDescription="@string/marvel_studios"
        android:scaleType="fitCenter"
        android:src="@drawable/img_logo_marvel_studios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/Text.Marvel.Section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="56dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="X-MEN"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/btnTheme"
        style="@style/Widget.Marvel.IconButton"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/theme_toggle"
        android:src="@drawable/ic_sun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/app_text_primary" />
</androidx.constraintlayout.widget.ConstraintLayout>
