<?xml version="1.0" encoding="utf-8"?>
<!--
  Onboarding (3 páginas). Figma:
    arte 400x404 @ (7,75) · dots 10dp @ y=509 · título 28/500 @ y=569
    descrição 20/300 @ y=617 · "Pular" 24/400 @ (55,768) · botão 150x50 r30 @ (238,761)
  Toolbar: sol à direita; chevron-left aparece a partir da página 2.
  Base do botão e do texto em % da altura (equivalem a 106dp e 240dp do fundo numa tela de 914dp);
  título em 1 linha com auto-size para a área da arte ter a mesma altura nas 3 páginas.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gTextBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7375" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gButtonBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.884" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/include_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_marginTop="@dimen/toolbar_top_margin"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpOnboarding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/dots"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <LinearLayout
        android:id="@+id/dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/tvPageTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/dot1"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/bg_dot_active" />

        <View
            android:id="@+id/dot2"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="6dp"
            android:background="@drawable/bg_dot" />

        <View
            android:id="@+id/dot3"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="6dp"
            android:background="@drawable/bg_dot" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvPageTitle"
        style="@style/Text.Marvel.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_padding"
        android:layout_marginBottom="6dp"
        android:autoSizeMaxTextSize="28sp"
        android:autoSizeMinTextSize="18sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/onboarding_title_1"
        app:layout_constraintBottom_toTopOf="@id/tvPageDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPageDescription"
        style="@style/Text.Marvel.Lead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_padding"
        android:minLines="3"
        android:text="@string/onboarding_desc_1"
        app:layout_constraintBottom_toTopOf="@id/gTextBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnSkip"
        style="@style/Text.Marvel.Button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:text="@string/skip"
        android:textColor="@color/app_text_primary"
        app:layout_constraintBottom_toBottomOf="@id/btnNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnNext" />

    <TextView
        android:id="@+id/btnNext"
        style="@style/Text.Marvel.Button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_button_primary"
        android:gravity="center"
        android:minWidth="150dp"
        android:paddingHorizontal="24dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@id/gButtonBottom"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
